--- a/style.css
+++ b/style.css
@@ -274,11 +274,11 @@ p {
     width: 263px;
     height: 40px;
     margin-bottom: 20px; /* Espacement entre les champs */
-    border-radius: 8px 0 0 0;
-    border: 1px solid transparent; /* Bordure transparente pour l'alignement */
+    border-radius: 8px; /* Arrondir tous les coins */
+    border: 1px solid #ccc; /* Bordure visible */
     padding: 10px;
     background-color: #f9f9f9;
-    opacity: 0; /* Opacité à 0 pour correspondre à la demande */
+    text-align: center; /* Centrer le texte */
 }
 
 /* Champ message avec hauteur plus grande */
@@ -286,12 +286,13 @@ p {
     width: 263px;
     height: 210px;
     margin-bottom: 20px;
-    border-radius: 8px 0 0 0;
-    border: 1px solid transparent;
+    border-radius: 8px; /* Arrondir tous les coins */
+    border: 1px solid #ccc; /* Bordure visible */
     padding: 10px;
     background-color: #f9f9f9;
-    opacity: 0; /* Opacité à 0 */
+    text-align: center; /* Centrer le texte */
 }
+
 
 /* Bouton de soumission "ENVOYER" */
 .custom-submit {
@@ -304,4 +305,47 @@ p {
     background-color: #D8D8D8;
     opacity: 0; /* Opacité à 0 */
     cursor: pointer; /* Afficher le curseur pointer pour le bouton */
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.modal.show {
+    display: flex;
+    opacity: 1;
+}
+
+.modal-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    position: relative;
+    z-index: 1000;
+}
+
+.modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
